--- a/SEProject/src/main/webapp/styles/home-admin.css
+++ b/SEProject/src/main/webapp/styles/home-admin.css
@@ -492,3 +492,35 @@ body {
   vertical-align: top;
   flex-shrink: 0;
 }
+
+
+/* styles.css */
+#navigationPanel {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 250px;
+    height: 100%;
+    background-color: #333;
+    padding-top: 60px;
+}
+
+#navigationPanel a {
+    padding: 15px;
+    text-decoration: none;
+    color: white;
+    display: block;
+}
+
+#navigationPanel a:hover {
+    background-color: #555;
+}
+
+#navButton {
+    position: fixed;
+    top: 10px;
+    left: 10px;
+    z-index: 2;
+}
+
