--- a/SE/src/main/webapp/CSS/Sign-Up.css
+++ b/SE/src/main/webapp/CSS/Sign-Up.css
@@ -1,104 +1,161 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
+
 *{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Poppins", sans-serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Poppins', sans-serif;
+}
+body{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+  background: url("../Images/1683619700.jpg");
+  background-size: cover;
+  background-position: center;
+}
+.box
+{
+  position: relative;
+  width: 370px;
+  height: 700px;
+  background: #1c1c1c;
+  border-radius: 50px 5px;
+  overflow: hidden;
+}
+.box::before{
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 370px;
+  height: 700px;
+  background: linear-gradient(60deg,transparent,#45f3ff,#45f3ff);
+  transform-origin: bottom right;
+  animation: animate 6s linear infinite;
+}
+.box::after{
+  content: '';
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 370px;
+  height: 700px;
+  background: linear-gradient(60deg,transparent,#d9138a,#d9138a);
+  transform-origin: bottom right;
+  animation: animate 6s linear infinite;
+  animation-delay: -3s;
+}
+@keyframes animate
+{
+  0%
+  {
+    transform: rotate(0deg);
   }
-  body{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    background: url(../Images/bg.jpg) no-repeat;
-    background-size: cover;
-    background-position: center;
+  100%
+  {
+    transform: rotate(360deg);
   }
-  .wrapper{
-    width: 420px;
-    background: transparent;
-    border: 2px solid rgba(0, 0, 0, 0.2);
-    backdrop-filter: blur(9px);
-    color: #000000;
-    border-radius: 12px;
-    padding: 30px 40px;
-  }
-  .wrapper h1{
-    font-size: 36px;
-    text-align: center;
-  }
-  .wrapper .input-box{
-    position: relative;
-    width: 100%;
-    height: 50px;
-    
-    margin: 30px 0;
-  }
-  .input-box input{
-    width: 100%;
-    height: 100%;
-    background: transparent;
-    border: none;
-    outline: none;
-    border: 2px solid rgba(255, 255, 255, .2);
-    border-radius: 40px;
-    font-size: 16px;
-    color: #000000;
-    padding: 20px 45px 20px 20px;
-  }
-  .input-box input::placeholder{
-    color: #000000;
-  }
-  .input-box i{
-    position: absolute;
-    right: 20px;
-    top: 30%;
-    transform: translate(-50%);
-    font-size: 20px;
-  
-  }
-  .wrapper .remember-forgot{
-    display: flex;
-    justify-content: space-between;
-    font-size: 14.5px;
-    margin: -15px 0 15px;
-  }
-  .remember-forgot label input{
-    accent-color: #000000;
-    margin-right: 3px;
-  
-  }
-  .remember-forgot a{
-    color: #000000;
-    text-decoration: none;
-  
-  }
-  .remember-forgot a:hover{
-    text-decoration: underline;
-  }
-  .wrapper .btn{
-    width: 100%;
-    height: 45px;
-    background: #fff;
-    border: none;
-    outline: none;
-    border-radius: 40px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, .1);
-    cursor: pointer;
-    font-size: 16px;
-    color: #333;
-    font-weight: 600;
-  }
-  .wrapper .register-link{
-    font-size: 14.5px;
-    text-align: center;
-    margin: 20px 0 15px;
-  
-  }
-  .register-link p a{
-    color: #000000;
-    text-decoration: none;
-    font-weight: 600;
-  }
-  .register-link p a:hover{
-    text-decoration: underline;
-  }
+}
+form{
+  position: absolute;
+  inset: 2px;
+  border-radius: 50px 5px;
+  background: #28292d;
+  z-index: 10;
+  display: flex;
+  flex-direction: column;
+}
+h2{
+  color: #45f3ff;
+  font-size: 35px;
+  font-weight: 500;
+  text-align: center;
+}
+.inputBox{
+  position: relative;
+  width: 350px;
+  margin-top: 35px;
+}
+.inputBox input{
+  position: relative;
+  width: 100%;
+  padding: 20px 10px 10px;
+  background: transparent;
+  border: none;
+  outline: none;
+  color: #23242a;
+  font-size: 1em;
+  letter-spacing: 0.05em;
+  z-index: 10;
+}
+input[type="submit"]{
+  font-size: 20px;
+  border: none;
+  outline: none;
+  background: #45f3ff;
+  padding: 5px;
+  margin-top: 40px;
+  border-radius: 90px;
+  font-weight: 600;
+  cursor: pointer;
+}
+input[type="submit"]:active
+{
+  background: linear-gradient(90deg,#45f3ff,#d9138a);
+  opacity: 0.8;
+}
+.inputBox span{
+  position: absolute;
+  left: 0;
+  padding: 20px 10px 10px;
+  font-size: 1em;
+  color: #8f8f8f;
+  pointer-events: none;
+  letter-spacing: 0.05em;
+  transition: 0.5s;
+}
+.inputBox input:valid ~ span,
+.inputBox input:focus ~ span
+{
+  color: #45f3ff;
+  transform: translate(-10px) translateY(-30px);
+  font-size: 0.75em;
+}
+.inputBox i
+{
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 2px;
+  background: #45f3ff;
+  transition: 0.5s;
+  pointer-events: none;
+  z-index: 9;
+}
+.inputBox input:valid ~ i,
+.inputBox input:focus ~ i{
+  height: 44px;
+
+}
+.links{
+  display: flex;
+  justify-content: space-between;
+}
+.links a{
+  margin: 25px 0;
+  font-size: 1em;
+  color: #8f8f8f;
+  text-decoration: none;
+}
+.links a:hover,
+.links a:nth-child(2)
+{
+  color: #45f3ff
+}
+.links a:nth-child(2):hover{
+  text-decoration: underline 2px;
+  text-underline-offset: 5px;
+}
