--- a/SE/src/main/webapp/CSS/home.css
+++ b/SE/src/main/webapp/CSS/home.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
 body{
 	margin: 0;
 }
@@ -9,9 +10,10 @@ body{
 	height: 200vh;
 	position: absolute;
 	z-index: -1;
+	font-family: 'Poppins', sans-serif;
 }
 h1{
-	font-family: 'Dangrek';
+	font-family: 'Poppins', sans-serif;
 	font-size: 90px;
 	position: absolute;
 	color: rgb(0, 0, 0);
