--- a/SE/src/main/webapp/CSS/navigationbar.css
+++ b/SE/src/main/webapp/CSS/navigationbar.css
@@ -10,7 +10,7 @@ body {
 #navigation a{
 	text-decoration: none;
 	padding: 9px 18px;
-	color: white;
+	color: black;
 	font-weight: bold;
 	border-radius: 18px;
 }
@@ -26,6 +26,7 @@ body {
 	font-family: sans-serif;
 	color: rgb(17, 5, 5);
 	z-index: 1;
+	transform: translate(20%);
 }
 .logo{
 	position: absolute;
