--- a/SE/src/main/webapp/CSS/home.css
+++ b/SE/src/main/webapp/CSS/home.css
@@ -6,6 +6,7 @@ body{
 	margin-right: 0;
 	margin-bottom: 0;
 	background-size: cover;
+	backgroun-color:#2AAA8A;
 	width: 100%;
 	height: 200vh;
 	position: absolute;
