--- a/SE/src/main/webapp/CSS/Login-ex.css
+++ b/SE/src/main/webapp/CSS/Login-ex.css
@@ -46,6 +46,7 @@ body{
     transform-origin: bottom right;
     animation: animate 6s linear infinite;
     animation-delay: -3s;
+
 }
 @keyframes animate
 {
@@ -66,6 +67,7 @@ form{
     z-index: 10;
     display: flex;
     flex-direction: column;
+
 }
 h2{
     color: #45f3ff;
@@ -74,12 +76,13 @@ h2{
     text-align: center;
 }
 .inputBox{
-    position: relative;
+    position: center;
     width: 300px;
     margin-top: 35px;
+
 }
 .inputBox input{
-    position: relative;
+    position: center;
     width: 100%;
     padding: 20px 10px 10px;
     background: transparent;
@@ -89,6 +92,7 @@ h2{
     font-size: 1em;
     letter-spacing: 0.05em;
     z-index: 10;
+
 }
 input[type="submit"]{
     font-size: 20px;
@@ -119,7 +123,7 @@ input[type="submit"]:active
 .inputBox input:focus ~ span
 {
     color: #45f3ff;
-    transform: translate(-10px) translateY(-30px);
+    transform: translate(10px) translateY(30px);
     font-size: 0.75em;
 }
 .inputBox i 
